--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <title>React App</title>
+    <title>4Learn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
